1.1.0: 2018 Jul 20

* added backend api type and constructor arguments (Sol Bekic)

* updated for OF 0.10.0
* updated to RtMidi 3.0.0
* readme consistency fixes (tpltnt)
* message parsing to ofxMidiMessage to ease raw byte handling (reported by
  Damian Stewart)

* fixed ofxMidiOut crash in a multi-thread context (reported by Hiroshi Matoba)

* removed static port info functions as a in/out port instance api might be
  different than the default (listPorts, getPortList, getNumPorts, getPortName)
* renamed port info functions to *InPort and *OutPort naming (ie. listInPorts,
  listOutPorts, etc)

1.0.6: 2016 Oct 24

* added ProjectGenerator usage info to readme

* updated to RtMidi 2.1.1

* fixed Linux build due to OF no longer including ALSA by default
  (reported by Nicola Pisanti)
* fixed missing value parsing for MIDI song pos pointer message
  (reported by James Morris)

1.0.5: 2015 Dec 24

* added mtof() & ftom() util functions (suggested by Thomas Geissl)
* added info to readme about possible issued when setting things up in
  constructors (reported by flyingrub)

* updated for OF 0.8.5
* updated to RtMidi 2.1.0 (note: RtError.h was removed in this version)
* updated PGMidi

* fixed iOS crash caused by occasional out of bounds PGMidi index

* removed example project files (rebuild them with the OF ProjectGenerator)

1.0.4: 2015 Aug 16

* source code whitespace cleanups
* updated exampleIOS for OF 0.8.3 (thanks leico)

1.0.3: 2013 Dec 29

* fixed stale readme repo links
* fixed exampleIOS message queue crash (reported by kritzikratzi)
* fixed missing CoreMIDI framework to input example (reported by danzeeeman)
* fixed an RtMidi bug that was causing null characters to be included in the 
  returned device name string (thanks Tim Murray-Browne)

1.0.2: 2013 Aug 13

  repo moved to github.com/danomatika

* added BSD license
* added logo

* updated for OF 0.8.0
* updated to RtMidi 2.0.1
* replaced ofMain.h includes with specific required files,