@@ -35,6 +35,12 @@ build/
 
 # example project files
 
+midiClockExample/Makefile
+midiClockExample/Project.xcconfig
+midiClockExample/config.make
+midiClockExample/midiClockExample.xcodeproj
+midiClockExample/openFrameworks-Info.plist
+
 midiExampleIOS/Project.xcconfig
 midiExampleIOS/config.make
 midiExampleIOS/midiExampleIOS.xcodeproj
