@@ -1,0 +1,17 @@
+/*
+ * Copyright (c) 2018 Dan Wilcox <danomatika@gmail.com>
+ *
+ * BSD Simplified License.
+ * For information on usage and redistribution, and for a DISCLAIMER OF ALL
+ * WARRANTIES, see the file, "LICENSE.txt," in this distribution.
+ *
+ * See https://github.com/danomatika/ofxMidi for documentation
+ *
+ */
+#include "ofMain.h"
+#include "ofApp.h"
+
+int main() {
+	ofSetupOpenGL(640, 480, OF_WINDOW);
+	ofRunApp(new ofApp());
+}
