@@ -1,0 +1,45 @@
+/*
+ * Copyright (c) 2018 Dan Wilcox <danomatika@gmail.com>
+ *
+ * BSD Simplified License.
+ * For information on usage and redistribution, and for a DISCLAIMER OF ALL
+ * WARRANTIES, see the file, "LICENSE.txt," in this distribution.
+ *
+ * See https://github.com/danomatika/ofxMidi for documentation
+ *
+ */
+#pragma once
+
+#include "ofMain.h"
+#include "ofxMidi.h"
+#include "ofxMidiClock.h"
+
+class ofApp : public ofBaseApp, public ofxMidiListener {
+
+public:
+
+	void setup();
+	void update();
+	void draw();
+	void exit();
+
+	void keyPressed(int key);
+	void keyReleased(int key);
+	void mouseMoved(int x, int y );
+	void mouseDragged(int x, int y, int button);
+	void mousePressed(int x, int y, int button);
+	void mouseReleased(int x, int y, int button);
+	void mouseEntered(int x, int y);
+	void mouseExited(int x, int y);
+	void windowResized(int w, int h);
+	void dragEvent(ofDragInfo dragInfo);
+	void gotMessage(ofMessage message);
+
+	void newMidiMessage(ofxMidiMessage& eventArgs);
+
+	ofxMidiIn midiIn;
+	ofxMidiClock clock;
+	bool running = false;
+	double seconds = 0;
+	double bpm = 120;
+};
